--- a/react/Teoria/myapp/src/App.css
+++ b/react/Teoria/myapp/src/App.css
@@ -1,5 +1,9 @@
+body{
+  background-color: rgb(231, 173, 208);
+}
+
 .titulo{
-    background-color: #f5f5f5;
+    background-color: rgba(148, 87, 235, 0.5);
     border: 1px solid #e3e3e3;
     border-radius: 5px;
     box-shadow: 0 0 5px #999;
@@ -9,18 +13,23 @@
     text-align: center;
 }
 
-#subtitulo{
-    background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #999;
-    margin-left: 10px; 
-    padding: 20px;
-    width: 400px;
-    text-align: center;
+.btn{
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+
+.card{
+  margin-left: 15px;
+  padding: 10px;
+  background-color: rosybrown;
+}
+  
+  .card-hover:hover {
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1), 0 0 40px rgba(148, 87, 235, 0.5);
+    transform: translateY(-3px);
+    transition: box-shadow 0.3s, transform 0.3s;
   }
   
-#subtitulo.subtituloN:hover{
-  background-color: blueviolet;
-}
-    
+  
+  
