--- a/react/myapp/myapp/src/App.css
+++ b/react/myapp/myapp/src/App.css
@@ -1,7 +1,67 @@
+.encabezado-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 200vh; /* para que no se desborde */   
+}
 
+.botones-derecha {
+  display: flex;
+  margin-right: 15px;
+}
+
+.btn{
+  margin-bottom: 15px;
+  margin-left: 15%;
+}
+
+.boton-inicio,
+.boton-carrito,
+.btn {
+  padding: 8px 16px;
+  font-size: 14px;
+  cursor: pointer;
+  background-color: #af4c93;
+  color: white; 
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 15px;
+  transition-duration: 0.4s;
+}
+
+.boton-inicio:hover,
+.boton-carrito:hover,
+.btn:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  border: 1px solid #9e4caf;
+}
+
+.boton-carrito .badge {
+  background-color: yellow;
+  color: black;
+  padding: 0.25em 0.5em;
+  border-radius: 0.25em;
+  margin-left: 0.5em;
+  /* Agrega cualquier estilo adicional para el span de la cantidad aquí */
+}
+
+body{
+  background-color: #e78282;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  margin: 0;
+  padding: 0;
+  width: 1000px;
+}
 
 .titulo{
-  background-color: #f5f5f5;
+  background-color: rgb(220, 245, 220);
   border: 1px solid #e3e3e3;
   border-radius: 5px;
   box-shadow: 0 0 5px #999;
@@ -46,6 +106,6 @@ background-color: rgb(43, 217, 226);
   max-width: 10%; 
   height: auto; 
   display: block;
-  margin-left: 10%;
+  margin-left: 20%;
   border-radius: 5px; 
 }
