--- a/react/Teoria/myapp/src/App.css
+++ b/react/Teoria/myapp/src/App.css
@@ -1,5 +1,7 @@
 body{
   background-color: rgb(231, 173, 208);
+  width: 200vh;
+  height: auto;
 }
 
 .titulo{
@@ -21,6 +23,7 @@ body{
 
 .card{
   margin-left: 15px;
+  margin-bottom: 15px;
   padding: 10px;
   background-color: rosybrown;
 }
