--- a/react/myapp/myapp/src/App.css
+++ b/react/myapp/myapp/src/App.css
@@ -14,7 +14,7 @@
 
 .btn{
   margin-bottom: 15px;
-  margin-left: 15%;
+  margin-left: 35%;
 }
 
 .boton-inicio,
@@ -76,7 +76,7 @@ body{
   border: 1px solid #e3e3e3;
   border-radius: 5px;
   box-shadow: 0 0 5px #999;
-  margin-left: 10px; 
+  
   padding: 20px;
   width: 400px;
   text-align: center;
@@ -103,9 +103,19 @@ background-color: rgb(43, 217, 226);
 } 
 
 .imagenDetalle {
-  max-width: 10%; 
+  max-width: 20%; 
   height: auto; 
   display: block;
-  margin-left: 20%;
+  margin-left: 40%;
   border-radius: 5px; 
+}
+
+
+.cardItem{
+  background-color: rgb(220, 245, 220);
+  border-radius: 5px;
+  box-shadow: 0 0 5px #999;
+  margin-left: 10px; 
+  padding: 10px;
+  width: 450px;
 }
